fix alignement colonne bracket

--- a/frontend/css/styles.scss
+++ b/frontend/css/styles.scss
@@ -2150,7 +2150,7 @@ body.fullscreen-game .app-footer {
     border: none;
     padding: 0;
    min-width: 200px;
-	text-align: left;
+	text-align: center;
 	/* background-color: #ff4444; */
 }
 
